--- a/public_html/assets/css/core.css
+++ b/public_html/assets/css/core.css
@@ -14,6 +14,14 @@ html{
     background-size: cover;
 }
 
+*.unselectable{
+    -moz-user-select: none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+}
+
 a{
     transition: color .2s;
 }
