--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -50,3 +50,11 @@ h1{
 #login-form {
     color: black;
 }
+
+/* Debug
+-------------------*/
+*{
+    outline-style: solid;
+    outline-width: 1px;
+    outline-color: red;
+}
