Migrate to PHP APACHE docker setup

--- a/html/assets/css/core.css
+++ b/html/assets/css/core.css
@@ -53,8 +53,8 @@ h1{
 
 /* Debug
 -------------------*/
-*{
+/* *{
     outline-style: solid;
     outline-width: 1px;
     outline-color: red;
-}
+} */
