--- a/html/assets/css/overlays/default.css
+++ b/html/assets/css/overlays/default.css
@@ -1,1 +1,8 @@
-/* The default theme for the webpage */
+/* General Styles
+-------------------*/
+
+html, body {
+    font-family: 'Lato', sans-serif;
+    background: #2196F3;
+    color: white;
+}
