--- a/html/assets/css/core.css
+++ b/html/assets/css/core.css
@@ -95,25 +95,28 @@ h1{
 /* Modal
 -------------------*/
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    /* background: rgba(0,0,0,0.2); */
     color: black;
 }
 
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    background-color: white;
+    margin: 0 auto auto auto;
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    /* border: 1px solid #888; */
+    border-radius: 0 0 2px 2px;
+    min-width: 320px;
+    width: 50%;
+    box-shadow: 2px 2px 5px 0 #222;
+    /* box-shadow: 4px 4px #1565c0; */
 }
 
 .close {
@@ -138,6 +141,25 @@ h1{
     cursor: pointer;
 }
 
+.modal.show{
+    -webkit-animation: modal-in 500ms ease both;
+  animation: modal-in 500ms ease both;
+}
+
+.modal.hide{
+    -webkit-animation: modal-out 500ms ease both;
+    animation: modal-out 500ms ease both;
+}
+
+@keyframes modal-in {
+    0% { top: -200px; opacity: 0; visibility: hidden;  }
+    100% { top: 0; opacity: 1; visibility: visible; }
+  }
+
+  @keyframes modal-out {
+    0% { top: 0; opacity: 1; visibility: visible; }
+    100% { top: -200px; opacity: 0; visibility: hidden;  }
+  }
 /* Debug
 -------------------*/
 /* *{
