--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -1,3 +1,33 @@
-html, body {
+/* Elements */
+html, body{
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+/* Classes */
+.background{
+    background: #eee;
+    width: 100%;
+    min-height: 40%;
+    position: absolute;
+    top: 0;
+}
+
+.container {
+    margin-top: 100px;
+}
+
+.section{
+    padding: 20px;
+    min-width: 330px;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* IDs */
+#title {
     font-family: 'Source Sans Pro', sans-serif;
 }
+/* Misc */
