--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -3,31 +3,44 @@ html, body{
     padding: 0;
     height: 100%;
     width: 100%;
+    font-size: 1.2em;
+    background: #3f374c;
+    color: white;
 }
 
 /* Classes */
 .background{
-    background: #eee;
-    width: 100%;
-    min-height: 40%;
+    background: #2cf9ae;
+    width: 200%;
+    min-height: 70%;
     position: absolute;
-    top: 0;
+    top: -20%;
 }
 
-.container {
-    margin-top: 100px;
+.contain {
+    width: 100%;
 }
 
 .section{
     padding: 20px;
     min-width: 330px;
-    max-width: 60%;
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
+    background: none;
+}
+
+.skew{
+    background: #2cf9ae;
+    transform: skewY(-5deg);
+    padding: 100px 0 10px 0;
 }
 
 /* IDs */
 #title {
     font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 700;
+    font-size: 3em;
 }
+
 /* Misc */
