Added seperate categories and information

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -37,10 +37,19 @@ h2{
 	padding: 0 10%;
 }
 
+#linksubtitle:link, #linksubtitle:visited, #linksubtitle:hover, #linksubtitle:active {
+	text-decoration: none;
+	color: #fff;
+}
+
 #title{
 	text-align: center;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+}
+
+.category{
+	margin: 20px 0;
 }
