--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -1,55 +1,100 @@
 html {
-	font-family: 'Open Sans', sans-serif;
-	color: #fff;
-	background: url('/assets/img/background.jpg') no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	font-size: 1.2em;
+    font-family: 'Open Sans', sans-serif;
+    color: #fff;
+    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)) no-repeat center center fixed, url('/assets/img/background.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-size: 1.2em;
 }
 
-html, body{
-	height: 100%;
+html,
+body {
+    height: 100%;
 }
 
-h1{
-	font-size: 3em;
-	padding: 10px;
-	white-space: nowrap;
+h1 {
+    font-size: 3em;
+    padding: 10px;
+    white-space: nowrap;
+    font-weight: 900;
 }
 
-h2{
-	font-size: 1.8em;
-	padding: 10px 0;
+h2 {
+    font-size: 1.8em;
+    padding: 10px 0;
 }
 
-#cover{
-	position: relative;
-	width: 100%;
-	height: 30%;
-	margin: auto;
+h3 {
+    font-size: 1.3em;
+    padding: 10px;
 }
 
-#content{
-	max-width: 1024px;
-	margin: 0 auto;
-	padding: 0 10%;
+li {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 1em;
+    text-indent: -1em;
 }
 
-#linksubtitle:link, #linksubtitle:visited, #linksubtitle:hover, #linksubtitle:active {
-	text-decoration: none;
-	color: #fff;
+li:before {
+    content: "-";
+    padding-right: 5px;
 }
 
-#title{
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+#cover {
+    position: relative;
+    width: 100%;
+    height: 30%;
+    margin: auto;
 }
 
-.category{
-	margin: 20px 0;
+#content {
+    max-width: 1024px;
+    margin: 0 auto;
+    padding: 0 10%;
+}
+
+#linksubtitle:link,
+#linksubtitle:visited,
+#linksubtitle:hover,
+#linksubtitle:active {
+    text-decoration: none;
+    color: #fff;
+}
+
+#qualificationlist {
+    padding-left: 60px;
+}
+
+#subtitle{
+	display: block;
+	font-size: 0.8em;
+	padding-left: 12px;
+	margin-bottom: 14px;
+}
+
+#title {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.info {
+    margin-left: 20px;
+}
+
+.category {
+    margin: 20px 0;
+}
+
+.skillcategory {
+    font-size: .8em;
+    border-radius: 2px;
+    border: 1px solid #fff;
+    padding: 0 2px;
+    background: rgba(255, 255, 255, .1);
 }
