Added education section into grid containers too

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -106,6 +106,10 @@ li:before {
     margin: 20px 0;
 }
 
+.subsection p{
+    padding: 20px;
+}
+
 .skillcategory {
     font-size: .8em;
     border-radius: 2px;
