--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -1,16 +1,15 @@
-/* open-sans-regular - latin */
 @font-face {
     font-family: 'Open Sans';
     font-style: normal;
     font-display: auto;
-    font-weight: 400;
-    src: url('../fonts/open-sans-v15-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local('Open Sans Regular'), local('OpenSans-Regular'),
-         url('../fonts/open-sans-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/open-sans-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/open-sans-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/open-sans-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/open-sans-v15-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+    font-weight: 300;
+    src: url('../fonts/open-sans-v15-latin-300.eot'); /* IE9 Compat Modes */
+    src: local('Open Sans Light'), local('OpenSans-Light'),
+         url('../fonts/open-sans-v15-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../fonts/open-sans-v15-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../fonts/open-sans-v15-latin-300.woff') format('woff'), /* Modern Browsers */
+         url('../fonts/open-sans-v15-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../fonts/open-sans-v15-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
   }
 
 @media (min-width: 30em) {
@@ -25,6 +24,7 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family: 'Open Sans';
     font-size: 1.2em;
 }
 
