May have cheekily started from scratch again

--- a/oldlol/assets/css/core.css
+++ b/oldlol/assets/css/core.css
@@ -20,6 +20,7 @@
 html {
     color: #fff;
     background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)) no-repeat center center fixed, url('/assets/img/background.jpg') no-repeat center center fixed;
+    /* background: black; */
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
