--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -2,11 +2,6 @@
     --secondary-text-color: rgb(87, 87, 87);
 }
 
-html{
-    background: url("/assets/svg/background.svg");
-    background-size: cover;
-}
-
 body{
     background: white;
     font-family: 'Open Sans', sans-serif;
@@ -18,6 +13,12 @@ body{
 
 a{
     color: var(--secondary-text-color);
+}
+
+hr{
+    height: 8px;
+    background-image: linear-gradient(90deg, rgb(240, 69, 240), rgb(46, 99, 245));
+    border: none;
 }
 
 h1,h2,h3{
