--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -22,7 +22,8 @@ hr{
 }
 
 h1,h2,h3{
-    font-family: "Heebo";
+    color: rgb(20, 20, 20);
+    font-family: "Heebo", sans-serif;
 }
 
 h1{
@@ -45,6 +46,13 @@ header p{
     font-size: 1.6em;
 }
 
+code{
+    display: block;
+    padding: 10px;
+    background: rgb(243, 243, 243);
+    margin: 10px 0;
+}
+
 p{
     color: var(--secondary-text-color);
 }
@@ -58,20 +66,21 @@ footer{
 }
 
 @media only screen and (min-width:60em) { 
-	#content{
+	.content{
         padding-left: 50px;
     }
 }
 
-#content{
+.content{
     margin: 3em 0;
 }
 
-#content p{
-    margin: 20px 0 30px 0;
+.content p{
+    margin: 20px 0 20px 0;
 }
 
-#link-button{
+.link-button{
+    display: inline-block;
     background: rgb(243, 243, 243);
     padding: 10px;
     border-radius: 5px;
@@ -80,6 +89,24 @@ footer{
     transition: background .5s;
 }
 
-#link-button:hover{
+.link-button:hover{
     background: rgb(190, 190, 190);
+}
+
+#contact table{
+    margin: 0;
+}
+
+@media only screen and (max-width:60em) { 
+	#contact td{
+        display: block;
+    }
+}
+
+#contact td{
+    padding: 5px 10px;
+}
+
+#contact td:first-child{
+    font-weight: bold;
 }
