--- a/pages/Index.module.scss
+++ b/pages/Index.module.scss
@@ -1,8 +1,8 @@
-@use "../src/css/color.scss";
+// @use "../src/css/color.scss";
 
 .content {
 	min-width: 320px;
-	max-width: 1000px;
+	max-width: 820px;
 	margin: 0 auto;
 	padding: 10px;
 }
