--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -1,9 +1,12 @@
+@use "../src/css/constants.scss" as const;
+
 .project {
 	composes: border-radius from "../src/css/shared.module.scss", box-shadow from "../src/css/shared.module.scss";
 	// border: 1px dotted red;
 	border-top: 5px solid rgb(218, 72, 72);
 	padding: 10px;
 	margin: 10px;
+	// background: const.$accent;
 }
 
 .title {
