--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -7,6 +7,12 @@ html {
 	font-family: "Inter", sans-serif;
 }
 
+html,
+body,
+#__next {
+	height: 100%;
+}
+
 @supports (font-variation-settings: normal) {
 	html {
 		font-family: "Inter var", sans-serif;
