--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -3,16 +3,17 @@
 .project {
 	composes: border-radius from "../src/css/shared.module.scss", box-shadow from "../src/css/shared.module.scss";
 	// border: 1px dotted red;
-	border-top: 5px solid rgb(218, 72, 72);
-	padding: 10px;
+	border-top: 5px solid const.$accent;
+	padding: 20px;
 	margin: 10px;
-	// background: const.$accent;
 }
 
 .title {
 	font-weight: 700;
+	margin: 10px 0;
 }
 
 .desc {
 	color: hsl(0, 0, 30%);
+	margin: 10px 0;
 }
