--- a/components/Button.module.scss
+++ b/components/Button.module.scss
@@ -3,9 +3,8 @@
 .button {
 	font-weight: 500;
 	padding: 10px;
-	font-size: 1em;
-	font-size: 0.8em;
-	text-transform: uppercase;
+	font-size: 1rem;
+	// text-transform: uppercase;
 	cursor: pointer;
 	border: none;
 	border-radius: 6px;
