--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -1,6 +1,7 @@
 @use "../src/css/constants.scss" as const;
 
 .project {
+	overflow: hidden;
 	composes: border-radius from "../src/css/shared.module.scss", box-shadow from "../src/css/shared.module.scss";
 	// border: 1px dotted red;
 	border-top: 5px solid const.$accent;
@@ -9,11 +10,26 @@
 }
 
 .title {
+	font-size: 1.2em;
 	font-weight: 700;
-	margin: 10px 0;
+	margin: 6px 0;
+}
+
+.buttons {
+	float: right;
+}
+
+.tag {
+	font-size: 0.8em;
+	color: hsl(0, 0, 60%);
+}
+
+.tag::after {
+	content: " ";
 }
 
 .desc {
+	font-size: 1em;
 	color: hsl(0, 0, 30%);
-	margin: 10px 0;
+	margin: 6px 0;
 }
