--- a/pages/Index.module.scss
+++ b/pages/Index.module.scss
@@ -14,6 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
 	.root {
+		color: const.$foreground_text_dark;
 		background: const.$background_dark;
 	}
 }
