--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -1,5 +1,3 @@
-@use "../src/css/constants.scss" as const;
-
 .header {
 	margin: 40px 20px;
 }
@@ -11,11 +9,5 @@
 }
 
 .header .subtitle {
-	color: const.$foreground_text_less;
-}
-
-@media (prefers-color-scheme: dark) {
-	.header .subtitle {
-		color: const.$foreground_text_less_dark;
-	}
+	color: var(--foreground-text-less);
 }
