--- a/components/Project.module.scss
+++ b/components/Project.module.scss
@@ -1,12 +1,10 @@
-@use "../src/css/constants.scss" as const;
-
 .project {
 	overflow: hidden;
 	composes: border-radius from "../src/css/shared.module.scss", box-shadow from "../src/css/shared.module.scss";
-	// border: 1px dotted red;
-	border-top: 5px solid const.$accent;
+	border-top: 5px solid var(--accent);
 	padding: 20px;
 	margin: 20px;
+	background: var(--red);
 }
 
 .title {
@@ -21,7 +19,7 @@
 
 .tag {
 	font-size: 0.8em;
-	color: const.$foreground_text_least;
+	color: var(--foreground-text-least);
 }
 
 .tag::after {
@@ -30,18 +28,12 @@
 
 .desc {
 	font-size: 1em;
-	color: const.$foreground_text_less;
+	color: var(--foreground-text-less);
 	margin: 6px 0;
 }
 
 @media (prefers-color-scheme: dark) {
 	.project {
 		box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.05);
-	}
-	.tag {
-		color: const.$foreground_text_least_dark;
-	}
-	.desc {
-		color: const.$foreground_text_less_dark;
 	}
 }
