Changed dark theme

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -5,13 +5,8 @@
 	--foreground-text-less: rgb(40, 40, 40);
 	--foreground-text-least: rgb(100, 100, 100);
 	--background: rgb(250, 250, 250);
-	--accent: rgb(237, 69, 240);
+	--accent: rgb(236, 53, 197);
 }
-
-$foreground_text_dark: rgb(250, 250, 250);
-$foreground_text_less_dark: darken($foreground_text_dark, 10%);
-$foreground_text_least_dark: darken($foreground_text_dark, 40%);
-$background_dark: rgb(20, 20, 20);
 
 html {
 	font-family: "Inter", sans-serif;
@@ -21,6 +16,7 @@ html,
 body,
 #__next {
 	height: 100%;
+	overflow: auto;
 }
 
 @supports (font-variation-settings: normal) {
@@ -34,6 +30,6 @@ body,
 		--foreground-text: rgb(250, 250, 250);
 		--foreground-text-less: rgb(220, 220, 220);
 		--foreground-text-least: rgb(170, 170, 170);
-		--background: rgb(10, 10, 10);
+		--background: rgb(20, 20, 20);
 	}
 }
