--- a/pages/Index.module.scss
+++ b/pages/Index.module.scss
@@ -2,6 +2,7 @@
 	color: var(--foreground-text);
 	background: var(--background);
 	height: 100%;
+	overflow: auto;
 }
 
 .content {
@@ -11,9 +12,13 @@
 	padding: 10px;
 }
 
-// @media (prefers-color-scheme: dark) {
-// 	.root {
-// 		color: const.$foreground_text_dark;
-// 		background: const.$background_dark;
-// 	}
-// }
+@media (prefers-color-scheme: dark) {
+	.root {
+		background-color: rgb(119, 0, 255);
+		background-image: linear-gradient(
+			0deg,
+			var(--background),
+			rgba(10, 10, 10, 0.8)
+		);
+	}
+}
