--- a/src/css/shared.module.scss
+++ b/src/css/shared.module.scss
@@ -3,10 +3,16 @@
 	The rules should be used with 'composes' properties.
 */
 
-.box-shadow {
-	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2);
+.card {
+	box-shadow: 0 5px 5px 1px rgba(0, 0, 0, 0.2);
+	border-top: 5px solid var(--accent);
+	padding: 20px;
+	margin: 20px;
+	border-radius: 2px;
 }
 
-.border-radius {
-	border-radius: 2px;
+@media (prefers-color-scheme: dark) {
+	.card {
+		box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.05);
+	}
 }
