--- a/pages/projects/project.module.scss
+++ b/pages/projects/project.module.scss
@@ -13,7 +13,8 @@
 	color: var(--foreground-text-least);
 }
 
-.coverImage img {
+.coverImage img,
+.skeleton {
 	width: 90%;
 	display: block;
 	margin: 20px auto;
