--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -4,7 +4,11 @@
 	--foreground-text: rgb(10, 10, 10);
 	--foreground-text-less: rgb(40, 40, 40);
 	--foreground-text-least: rgb(100, 100, 100);
-	--background: rgb(250, 250, 250);
+	--background: linear-gradient(
+		180deg,
+		rgb(255, 255, 255) 20%,
+		rgb(245, 245, 255) 100%
+	);
 	--accent: rgb(236, 53, 197);
 }
 
@@ -40,21 +44,21 @@ body,
 	}
 }
 
-@media (prefers-color-scheme: dark) {
-	:root {
-		--foreground-text: rgb(250, 250, 250);
-		--foreground-text-less: rgb(220, 220, 220);
-		--foreground-text-least: rgb(170, 170, 170);
-		--background: rgb(20, 20, 20);
-	}
+// @media (prefers-color-scheme: dark) {
+// 	:root {
+// 		--foreground-text: rgb(250, 250, 250);
+// 		--foreground-text-less: rgb(220, 220, 220);
+// 		--foreground-text-least: rgb(170, 170, 170);
+// 		--background: rgb(20, 20, 20);
+// 	}
 
-	html,
-	body {
-		background-color: rgb(119, 0, 255);
-		background-image: linear-gradient(
-			0deg,
-			var(--background),
-			rgba(10, 10, 10, 0.8)
-		);
-	}
-}
+// 	html,
+// 	body {
+// 		background-color: rgb(119, 0, 255);
+// 		background-image: linear-gradient(
+// 			0deg,
+// 			var(--background),
+// 			rgba(10, 10, 10, 0.8)
+// 		);
+// 	}
+// }
