Turned card into a module

--- a/components/Hero.module.scss
+++ b/components/Hero.module.scss
@@ -3,7 +3,7 @@
 	justify-content: space-between;
 	align-items: center;
 	margin: 40px 20px;
-	height: 60%;
+	height: 70%;
 }
 
 .header .title {
@@ -19,7 +19,7 @@
 }
 
 .textContent {
-	padding: 0 20px 0 0;
+	padding: 0 10px;
 }
 
 .links {
