Added back button to cards

--- a/pages/projects/project.module.scss
+++ b/pages/projects/project.module.scss
@@ -1,6 +1,6 @@
 .project {
-	overflow: hidden;
-	composes: card from "../../src/css/shared.module.scss";
+	// overflow: hidden;
+	// composes: card from "../../src/css/shared.module.scss";
 }
 
 .title {
