Separated variants, added MyInfo section

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -20,7 +20,6 @@ html,
 body {
 	color: var(--foreground-text);
 	background: var(--background);
-	height: 100%;
 	overflow: auto;
 }
 
@@ -29,6 +28,12 @@ body,
 #__next {
 	height: 100%;
 	// overflow: auto;
+}
+
+h2 {
+	font-size: 1.6em;
+	font-weight: 700;
+	color: var(--foreground-text-least);
 }
 
 #__next {
