--- a/src/css/global.css
+++ b/src/css/global.css
@@ -9,7 +9,11 @@
 		rgb(255, 255, 255) 20%,
 		rgb(245, 245, 255) 100%
 	);
-	--accent: rgb(96, 71, 204);
+	--accent-raw: 96, 71, 204;
+	--accent: rgb(var(--accent-raw));
+
+	color: var(--foreground-text);
+	background: var(--background);
 }
 
 html {
@@ -18,8 +22,6 @@ html {
 
 html,
 body {
-	color: var(--foreground-text);
-	background: var(--background);
 	overflow: auto;
 }
 
@@ -27,7 +29,12 @@ html,
 body,
 #__next {
 	height: 100%;
-	// overflow: auto;
+	/* overflow: auto; */
+}
+
+h1 {
+	font-weight: 800;
+	font-size: 3em;
 }
 
 h2 {
@@ -49,21 +56,20 @@ h2 {
 	}
 }
 
-// @media (prefers-color-scheme: dark) {
-// 	:root {
-// 		--foreground-text: rgb(250, 250, 250);
-// 		--foreground-text-less: rgb(220, 220, 220);
-// 		--foreground-text-least: rgb(170, 170, 170);
-// 		--background: rgb(20, 20, 20);
-// 	}
-
-// 	html,
-// 	body {
-// 		background-color: rgb(119, 0, 255);
-// 		background-image: linear-gradient(
-// 			0deg,
-// 			var(--background),
-// 			rgba(10, 10, 10, 0.8)
-// 		);
-// 	}
-// }
+/*  @media (prefers-color-scheme: dark) {
+ 	:root {
+ 		--foreground-text: rgb(250, 250, 250);
+ 		--foreground-text-less: rgb(220, 220, 220);
+ 		--foreground-text-least: rgb(170, 170, 170);
+ 		--background: rgb(20, 20, 20);
+	 }
+ 	html,
+ 	body {
+ 		background-color: rgb(119, 0, 255);
+ 		background-image: linear-gradient(
+ 			0deg,
+ 			var(--background),
+ 			rgba(10, 10, 10, 0.8)
+ 		);
+ 	}
+ } */
