--- a/pages/projects/project.module.css
+++ b/pages/projects/project.module.css
@@ -7,6 +7,7 @@
 }
 
 .subtitle {
+	line-height: 1.2;
 	font-size: 2em;
 	color: var(--foreground-text-least);
 }
@@ -20,6 +21,7 @@
 }
 
 .content {
+	line-height: 1.5;
 	font-size: 1.2em;
 	padding: 10px;
 }
