--- a/components/Project.module.css
+++ b/components/Project.module.css
@@ -5,7 +5,7 @@
 }
 
 .title {
-	font-size: 1.2em;
+	font-size: 1.6em;
 	font-weight: 700;
 	margin: 6px 0;
 }
@@ -17,6 +17,8 @@
 .tag {
 	font-size: 0.8em;
 	color: var(--foreground-text-least);
+	text-transform: uppercase;
+	letter-spacing: .2em;
 }
 
 .tag::after {
