--- a/components/misc/Dialog.module.css
+++ b/components/misc/Dialog.module.css
@@ -1,22 +1,26 @@
+.hidden {
+	display: none;
+}
+
 .container {
-    position: absolute;
-    background: rgb(0, 0, 0, 0.4);
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	position: absolute;
+	background: rgb(0, 0, 0, 0.3);
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .dialog {
-    position: absolute;
-    border-radius: 5px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    background: var(--background);
+	position: absolute;
+	border-radius: 5px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 20px;
+	background: var(--background);
 }
 
 .dialog h1 {
-    padding: 10px 0 20px 0;
+	padding: 10px 0 20px 0;
 }
