--- a/components/index/Hero.module.css
+++ b/components/index/Hero.module.css
@@ -1,4 +1,5 @@
 .header {
+	position: relative;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -46,7 +47,7 @@
 .settings {
 	font-size: 2em;
 	top: 1em;
-	right: 45px;
+	right: 15px;
 	position: absolute;
 	cursor: pointer;
 	color: var(--foreground-text-least);
