--- a/components/index/Hero.module.css
+++ b/components/index/Hero.module.css
@@ -1,19 +1,34 @@
-.header {
+.backdrop {
+	background: url(https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+	background-position: center;
+	background-size: cover;
+	height: 50%;
+	width: 100%;
+	filter: blur(6px) saturate(100%) brightness(40%);
+	position: absolute;
+	z-index: 0;
+}
+
+.container {
 	position: relative;
+	z-index: 2;
+	max-width: 800px;
+	margin: 0 auto;
+	height: 50%;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin: 40px 20px;
-	height: 50%;
 }
 
-.header .title {
-	font-size: 5em;
+.container .title {
+	text-transform: uppercase;
+	color: var(--accent);
+	font-size: 4.5em;
 	font-weight: 800;
 	margin: 0 0 20px 0;
 }
 
-.header .subtitle {
+.container .subtitle {
 	line-height: 1.3;
 	font-weight: 700;
 	font-size: 1.4em;
