--- a/components/index/Hero.module.css
+++ b/components/index/Hero.module.css
@@ -1,12 +1,27 @@
 .backdrop {
-	background: url(https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+	background: url(https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
 	background-position: center;
 	background-size: cover;
-	height: 50%;
+	height: 100%;
 	width: 100%;
-	filter: blur(6px) saturate(100%) brightness(40%);
+	filter: blur(6px) saturate(75%) brightness(40%);
+	position: fixed;
+	z-index: -1;
+}
+
+.backdrop:before {
+	content: "";
 	position: absolute;
-	z-index: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-image: linear-gradient(
+		to bottom,
+		rgb(var(--accent-raw), 0.7),
+		rgb(0, 0, 0, 0.6)
+	);
+	opacity: 0.6;
 }
 
 .container {
@@ -21,8 +36,8 @@
 }
 
 .container .title {
-	text-transform: uppercase;
-	color: var(--accent);
+	/* text-transform: uppercase; */
+	/* color: var(--accent); */
 	font-size: 4.5em;
 	font-weight: 800;
 	margin: 0 0 20px 0;
@@ -32,7 +47,7 @@
 	line-height: 1.3;
 	font-weight: 700;
 	font-size: 1.4em;
-	color: var(--foreground-text-less);
+	color: var(--foreground-text);
 }
 
 .textContent {
