--- a/src/css/global.css
+++ b/src/css/global.css
@@ -4,8 +4,9 @@
 	--foreground-text: rgb(255, 255, 255);
 	--foreground-text-less: rgb(200, 200, 200);
 	--foreground-text-least: rgb(110, 110, 120);
-	--background: rgb(20, 20, 20);
-	--accent-raw: 221, 255, 50;
+	--background: rgb(30, 30, 30);
+	/* --background: rgb(230, 230, 230); */
+	--accent-raw: 255, 122, 122;
 	--accent: rgb(var(--accent-raw));
 
 	color: var(--foreground-text);
